--- a/golang_htmx/index.html
+++ b/golang_htmx/index.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <div class="row mt-4 g-4">
+        <div class="col-8">
+            <h1 class="mb-4">Film List</h1>
 
-    {{ range .Films }}
+            <ul class="list-group fs-5 me-5">
+                {{range .Films}}
+                    <li class="list-group-item bg-primary text-white">{{.Title}} - {{.Director}}</li>
+                {{end}}
+            </ul>
+        </div>
 
-    <p>{{ .Title }} - {{ .Director }}</p>
+        <div class="col-4">
+            <h1 class="mb-4">Add Film</h1>
 
-    {{ end }}
+            <form>
+                <div class="mb-2">
+                    
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
