--- a/golang_htmx/index.html
+++ b/golang_htmx/index.html
@@ -23,7 +23,8 @@
 
             <form>
                 <div class="mb-2">
-                    
+                    <label for="film-title">Title</label>
+                    <input type="text" name="director" id="film-director">
                 </div>
             </form>
         </div>
