--- a/golang_htmx/index.html
+++ b/golang_htmx/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -24,8 +24,14 @@
             <form>
                 <div class="mb-2">
                     <label for="film-title">Title</label>
-                    <input type="text" name="director" id="film-director">
+                    <input type="text" name="title" id="film-title" class="form-control">
                 </div>
+
+                <div class="mb-3">
+                    <label for="film-director">Director</label>
+                    <input type="text" name="director" id="film-director" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
     </div>
